fix: Code review suggestions